test-cases/negative/test_022_else_without_if.lay
# negative test: else without if
# expected: error should be thrown

else
  print 'hello'


